[package]
name = "hiciap"
version = "0.1.0"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
ark-ip-proofs = { git = "https://github.com/arkworks-rs/ripp", rev = "59d59d9" }
ark-dh-commitments = { git = "https://github.com/arkworks-rs/ripp", rev = "59d59d9" }
ark-inner-products = { git = "https://github.com/arkworks-rs/ripp", rev = "59d59d9" }
ark-groth16 = "0.3"
ark-serialize = { version = "0.3", default-features = false, features = [ "derive" ] }
ark-std = { version = "0.3", default-features = false }
ark-crypto-primitives = "0.3"
ark-ec = "0.3"
ark-ff = "0.3"
blake2 = "0.9"
merlin = "3"
rand_chacha = "0.3"
rayon = "1"
thiserror = "1"

[dev-dependencies]
ark-bls12-381 = { version = "0.3", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = "0.3"
ark-r1cs-std = "0.3"
ark-relations = "0.3"
arkworks-gadgets = "0.3"

[features]
default = ["asm", "parallel"]
parallel = [
    "ark-ip-proofs/parallel",
    "ark-dh-commitments/parallel",
    "ark-inner-products/parallel",
    "ark-groth16/parallel",
    "ark-std/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel",
]
asm = ["ark-ff/asm"]
